--- a/Admin/src/app/pages/forms/tesis-form/tesis-form.component.scss
+++ b/Admin/src/app/pages/forms/tesis-form/tesis-form.component.scss
@@ -67,4 +67,8 @@
   border-color: #0f4970 !important; /* Nuevo color de borde al pasar el mouse */
 }
 
+.swal-title-small {
+  font-size: 14px; /* Ajusta el tamaño según sea necesario */
+}
+
 
