--- a/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
@@ -1,10 +1,10 @@
 <div class="row">
     <!-- end col -->
     <div class="col-xl-6">
-        <div class="card">
+        <div class="card" style="min-height: 500px;">
             <div class="card-header">
               <h4 class="card-title mb-0 d-flex align-items-center justify-content-between">
-                <span><i class="fas fa-chart-bar"></i> Conteo de variables por personas</span>
+                <span><i class="fas fa-chart-bar"></i> Conteo de personas por variables</span>
                 <i class="bi bi-info-circle" tooltip="Esta gráfica muestra la distribución de personas por variables categóricas. Por defecto, se muestra la distribución por departamento, pero puedes seleccionar otras variables categóricas para ver cómo se distribuyen las personas según esas categorías." style="text-align: right;"></i>
               </h4> <br>
             </div><!-- end card header -->
@@ -26,7 +26,7 @@
     </div>
     <!-- end col -->
     <div class="col-xl-6">
-        <div class="card">
+        <div class="card" style="min-height: 500px;">
             <div class="card-header">
               <h4 class="card-title mb-0 d-flex align-items-center justify-content-between">
                 <span><i class="fas fa-chart-bar"></i> Riesgo de consumo de sustancias psicoactivas vs tipo de sexo</span>
