--- a/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-graphs/tesis-graphs.component.html
@@ -61,17 +61,23 @@
 
             </div><!-- end card header -->
 
-            <select [(ngModel)]="variable1_param" class="form-select" id="variable1_param" (change)="consultarDatosParametros()">
-                <option selected value="">Seleccione una variable</option>
-                <option *ngFor="let variable1 of listaVariables" [value]="variable1.valor">{{ variable1.label }}</option>
-            </select>
-            <p *ngIf="descripcionSeleccionada1" style="margin-left: 10px;"> {{ descripcionSeleccionada1 }}</p>
+            <div class="row">
+                <div class="col-lg-6">
+                  <select [(ngModel)]="variable1_param" class="form-select" id="variable1_param" (change)="consultarDatosParametros()">
+                    <option selected value="">Seleccione una variable</option>
+                    <option *ngFor="let variable1 of listaVariables" [value]="variable1.valor">{{ variable1.label }}</option>
+                  </select>
+                  <p *ngIf="descripcionSeleccionada1" style="margin-left: 10px;"> {{ descripcionSeleccionada1 }}</p>
+                </div>
 
-            <select [(ngModel)]="variable2_param" class="form-select" id="variable2_param" (change)="consultarDatosParametros()">
-                <option selected value="">Seleccione una variable</option>
-                <option *ngFor="let variable2 of listaVariables" [value]="variable2.valor">{{ variable2.label }}</option>
-            </select>
-            <p *ngIf="descripcionSeleccionada2" style="margin-left: 10px;"> {{ descripcionSeleccionada2 }}</p>
+                <div class="col-lg-6">
+                  <select [(ngModel)]="variable2_param" class="form-select" id="variable2_param" (change)="consultarDatosParametros()">
+                    <option selected value="">Seleccione una variable</option>
+                    <option *ngFor="let variable2 of listaVariables" [value]="variable2.valor">{{ variable2.label }}</option>
+                  </select>
+                  <p *ngIf="descripcionSeleccionada2" style="margin-left: 10px;"> {{ descripcionSeleccionada2 }}</p>
+                </div>
+            </div>
 
             <div class="card-body">
                 <apx-chart [series]="stacked100BarChartMarihuana.series" [chart]="stacked100BarChartMarihuana.chart"
