--- a/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
@@ -32,7 +32,7 @@
   <div class="col-xl-12">
       <div class="card card-height-100">
         <div class="card-header d-flex align-items-center">
-          <h5 class="card-title mb-0 flex-grow-1">Conteo de personas segun el nivel de reisgo por consumo de SPI({{titulo}})</h5>
+          <h5 class="card-title mb-0 flex-grow-1"><i class="fas fa-chart-bar"></i>Conteo de personas segun el nivel de reisgo por consumo de SPI({{titulo}})</h5>
         </div>
           <!--end card-header-->
         <div class="card-body">
